Started to change int[] to Pair<Integer,Integer>