@@ -9,6 +9,7 @@ import dkeep.logic.ArenaMap;
 import dkeep.logic.GameLogic;
 import dkeep.logic.Hero;
 import dkeep.logic.Ogre;
+import pair.Pair;
 
 
 public class GameTests {
@@ -20,14 +21,12 @@ public class GameTests {
 	
 	@Test
 	public void testMoveHeroIntoFreeCell(){
-		int[] test1 = {1,1},test2 = {2,1};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(1,1),test2 = new Pair<Integer,Integer>(2,1);
 		ArenaMap game_map = new ArenaMap(this.map);
 		GameLogic game = new GameLogic(game_map,0);
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 		game.moveHero('s');
-		assertEquals( test2[0] , game.getHero().getPos()[0]);
-		assertEquals( test2[1] , game.getHero().getPos()[1]);
+		assertEquals( test2 , game.getHero().getPos());
 	}
 	
 	@Test
@@ -42,44 +41,36 @@ public class GameTests {
 
 	@Test
 	public void testMoveHeroIntoOccupiedCell(){
-		int[] test1 = {1,1};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(1,1);
 		ArenaMap game_map = new ArenaMap(this.map);
 		GameLogic game = new GameLogic(game_map,0);
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 		game.moveHero('a');
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 		game.moveHero('w');
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 	}
 
 	@Test
 	public void testMoveHeroIntoClosedDoor(){
-		int[] test1 = {1,1}, test2 = {2,1};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(1,1), test2 = new Pair<Integer,Integer>(2,1);
 		ArenaMap game_map = new ArenaMap(this.map);
 		GameLogic game = new GameLogic(game_map,0);
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1, game.getHero().getPos());
 		game.moveHero('s');
-		assertEquals( test2[0] , game.getHero().getPos()[0]);
-		assertEquals( test2[1] , game.getHero().getPos()[1]);
+		assertEquals( test2, game.getHero().getPos());
 		game.moveHero('a');
-		assertEquals( test2[0] , game.getHero().getPos()[0]);
-		assertEquals( test2[1] , game.getHero().getPos()[1]);
+		assertEquals( test2, game.getHero().getPos());
 }
 
 	@Test
 	public void testOpenDoors(){
-		int[] test1 = {3,1};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(3,1);
 		ArenaMap game_map = new ArenaMap(this.map);
 		GameLogic game = new GameLogic(game_map,0);
 		game.moveHero('s');
 		game.moveHero('s');
-		//System.out.print( "HERO["+game.getHero().getPos()[0]+","+game.getHero().getPos()[1]+"]\n");
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 		game.getMap().openDoors();
 		assertEquals( 'S' , game.getMap().getMap()[0][3]); //door 1
 		assertEquals( 'S' , game.getMap().getMap()[0][4]); //door 2
@@ -87,14 +78,14 @@ public class GameTests {
 
 	@Test
 	public void testEnterDoors(){
-		int[] test1 = {3,1};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(3,1);
 		ArenaMap game_map = new ArenaMap(this.map);
 		GameLogic game = new GameLogic(game_map,0);
 		game.moveHero('s');
 		game.moveHero('s');
 		//System.out.print( "HERO["+game.getHero().getPos()[0]+","+game.getHero().getPos()[1]+"]\n");
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
+		assertEquals( test1 , game.getHero().getPos());
 		game.getMap().openDoors();
 		assertEquals( 'S' , game.getMap().getMap()[0][3]); //door 1
 		assertEquals( 'S' , game.getMap().getMap()[0][4]); //door 2
@@ -122,20 +113,21 @@ public class GameTests {
 	public void testMoveAndClub(){
 		ArenaMap map = new ArenaMap();
 		GameLogic game = new GameLogic(map,1);
-		int[] temp;
+		Pair<Integer,Integer> temp;
 		int px = game.getOgres().get(0).getX() , py = game.getOgres().get(0).getY();
 		boolean cnn= false,cns=false,cnw=false,cne=false, csn=false , css=false , csw=false , cse=false, 
 				cen=false , ces=false , cew=false , cee=false , cwn=false , cws=false , cwe=false , cww=false;
 		while ( !(cnn && cns && cnw && cne && csn && css && csw && cse && cen && ces && cew && cee && cwn && cws && cwe && cww) ){
-			do{
+			do{ //MOVE OGRE FIRST
 				temp = game.getOgres().get(0).moveCharacter(map.getMapSize());
-			}while( !map.isFree(temp[0], temp[1]) );
-			game.getOgres().get(0).setPos(temp[0],temp[1],map.getMapSize());
-			game.getOgres().get(0).setClub(temp[0], temp[1], map.getMapSize());
-			do{
+			}while( !map.isFree(temp) );
+			game.getOgres().get(0).setPos(temp.getFirst().intValue(), temp.getSecond().intValue() ,map.getMapSize());
+			game.getOgres().get(0).setClub(temp.getFirst().intValue(), temp.getSecond().intValue() , map.getMapSize());
+			
+			do{ //MOVE CLUB
 				temp = game.getOgres().get(0).moveClub(map.getMapSize());
-			}while( !map.isFree(temp[0], temp[1]) );
-			game.getOgres().get(0).setClub(temp[0], temp[1], map.getMapSize());
+			}while( !map.isFree(temp) );
+			game.getOgres().get(0).setClub(temp.getFirst().intValue(), temp.getSecond().intValue() , map.getMapSize());
 			int ox = game.getOgres().get(0).getX(), oy = game.getOgres().get(0).getY(), 
 				cx = game.getOgres().get(0).getClubX(), cy = game.getOgres().get(0).getClubY();
 			
@@ -248,15 +240,11 @@ public class GameTests {
 	@Test
 	
 	public void moveinDungeon(){
-		int[] test1 = {1,1};
-		int[] test2 = {1,2};
+		Pair<Integer,Integer> test1 = new Pair<Integer,Integer>(1,1), test2 = new Pair<Integer,Integer>(1,2);
 		GameLogic game =new GameLogic(0);
-		assertEquals( test1[0] , game.getHero().getPos()[0]);
-		assertEquals( test1[1] , game.getHero().getPos()[1]);
+		assertEquals( test1 , game.getHero().getPos());
 		game.moveHero('d');
-		assertEquals( test2[0] , game.getHero().getPos()[0]);
-		assertEquals( test2[1] , game.getHero().getPos()[1]);
-		
+		assertEquals( test2 , game.getHero().getPos());
 		
 	}
 	
